# CoEnv

./: .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  DEMO_OUTPUT.md  LICENSE  README.md  llms.txt  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
analysis/: CYTHON_DECISION.md  benchmark_comparison.py  inference_cython_example.pyx  performance_analysis.md
demo/: advanced_demo.py  demo.py
demo/test_project/: .env.example
docs/: USAGE.md  spec.md
src/coenv/: __init__.py  main.py  mcp_server.py
src/coenv/core/: __init__.py  discovery.py  excludes.py  inference.py  lexer.py  metadata.py  syncer.py  telemetry.py
test_real_project/: .env.example  test_sync.py
tests/: __init__.py  manual_test.py  test_discovery.py  test_excludes.py  test_inference.py  test_lexer.py  test_syncer.py
